continue pushing code

--- a/introcs/ElementsOfPrograming/CMakeLists.txt
+++ b/introcs/ElementsOfPrograming/CMakeLists.txt
@@ -20,3 +20,5 @@ add_executable(Sqrt Sqrt.c)
 add_executable(Binary Binary.c)
 add_executable(Gambler Gambler.c)
 add_executable(Factors Factors.c)
+add_executable(Sample Sample.c)
+add_executable(CouponCollector CouponCollector.c)
