--- a/introcs/ElementsOfPrograming/CMakeLists.txt
+++ b/introcs/ElementsOfPrograming/CMakeLists.txt
@@ -22,3 +22,6 @@ add_executable(Gambler Gambler.c)
 add_executable(Factors Factors.c)
 add_executable(Sample Sample.c)
 add_executable(CouponCollector CouponCollector.c)
+add_executable(PrimeSieve PrimeSieve.c)
+add_executable(SelfAvoidingWalk SelfAvoidingWalk.c)
+add_executable(RandomSeq RandomSeq.c)
